chromeos: enable MouseCursorEventFilter for mushrome

Now that mushrome creates a WindowTreeTreeHostManager it can create a
MouseCursorEventFilter. Also updates test expectation as a bunch of
tests were relying on this.

BUG=714150,706474
TEST=covered by tests
R=jamescook@chromium.org

Review-Url: https://codereview.chromium.org/2868463002
Cr-Commit-Position: refs/heads/master@{#469715}

Former-commit-id: a5888e81e68aff997094e675cccfe09c559d5f4b